--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
+    "motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
